src/styles/main.css
@import './md.css';

html,
body,
#app {
  height: 100%;
  margin: auto;
  padding: 0;
}

body {
  max-width: 1280px;
}

html.dark {
  color: #e5e7eb;
  background: rgb(24, 24, 28);
}

.utterances {
  background: white;
}
html.dark .utterances {
  background: rgb(24, 24, 28);
}

#nprogress {
  pointer-events: none;
}

#nprogress .bar {
  background: rgba(13, 148, 136, 0.75);
  position: fixed;
  z-index: 1031;
  top: 0;
  left: 0;
  width: 100%;
  height: 2px;
}

/* katex displayMode */
.katex-display {
  overflow-x: auto;
  overflow-y: hidden;
}

/* （移动端）遮罩层 */
.mdui-overlay {
  position: fixed;
  top: 64px;
  left: 0;
  width: 5000px;
  height: 5000px;
  z-index: 2;
  background: rgba(0, 0, 0, 0.4);
  backface-visibility: hidden;
  display: none;
  opacity: 0;
  transition-duration: 0.3s;
  transition-property: opacity, visibility;
  will-change: opacity;
}

.mdui-overlay-show {
  display: unset;
  opacity: 1;
}

.sidebar-open {
  right: 0 !important;
}

